--- a/angularapp/index.html
+++ b/angularapp/index.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Primer Parcial CLIFTON</title>
   <base href="/">
@@ -8,8 +6,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
+<link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
 <body>
   <app-root></app-root>
-</body>
-</html>
+<script src="runtime.440bb58af41d47ef606d.js" defer></script><script src="polyfills.06bd439db38a08b31ca3.js" defer></script><script src="main.5afe8d2150ee2924126e.js" defer></script>
+
+</body></html>
